--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    <h3>My name is Gaurav Raj Shah</h3>
+    <h2>My name is Gaurav Raj Shah.</h2>
+    <h3>Nice to meet you.</h3>
     
 </body>
 </html>
