--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gaurav Raj Shah</title>
 </head>
+
+<style>
+    body {
+        background-color: #9fdff5;
+    }
+</style>
 <body>
     <h1>Hello World!</h1>
     <h2>My name is Gaurav Raj Shah.</h2>
