--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
 <style>
     body {
-        background-color: #9fdff5;
+        /* background-color: #9fdff5; */
+        background-image: linear-gradient(45deg, #1a5c83 ,  #80d0c7);
+        /* background-repeat: no-repeat; */
+        height: 730px;
     }
 </style>
 <body>
