--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaurav Raj Shah</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Gaurav Raj Shah</title>
+    </head>
 
-<style>
-    body {
-        /* background-color: #9fdff5; */
-        background-image: linear-gradient(45deg, #1a5c83 ,  #80d0c7);
-        /* background-repeat: no-repeat; */
-        height: 730px;
-    }
-</style>
-<body>
-    <h1>Hello World!</h1>
-    <h2>My name is Gaurav Raj Shah.</h2>
-    <h3>Nice to meet you.</h3>
-    <p>(<u>site under construction</u>)</p>
-    
-</body>
+    <style>
+        body {
+            background-image: linear-gradient(45deg, #1a5c83 ,  #80d0c7);
+            height: 730px;
+            text-align: center;
+        }
+    </style>
+
+    <body>
+        <h1>Hello World!</h1>
+        <h2>My name is Gaurav Raj Shah.</h2>
+        <h3>Nice to meet you.</h3>
+        <p>(<u>site under construction</u>)</p>
+    </body>
+
 </html>
