--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
         <h1>Hello World!</h1>
         <h2>My name is Gaurav Raj Shah.</h2>
-        <h3>Nice to meet you.</h3>
+        <h3>Nice to see you here.</h3>
         <p>(<u>site under construction</u>)</p>
     </body>
 
