color scheme changed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <style>
         body {
-            background-image: linear-gradient(45deg, #1a5c83 ,  #80d0c7);
+            background-image: linear-gradient(45deg, #68E1FD ,  #91bac4);
             height: 730px;
             text-align: center;
         }
