--- a/index.html
+++ b/index.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Gaurav Raj Shah</title>
-    </head>
 
-    <style>
-        body {
-            background-image: linear-gradient(45deg, #68E1FD ,  #91bac4);
-            height: 730px;
-            text-align: center;
-        }
-    </style>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gaurav Raj Shah</title>
+    <link rel="stylesheet" href="stylesheet.css">
+</head>
 
-    <body>
-        <h1>Hello World!</h1>
-        <h2>My name is Gaurav Raj Shah.</h2>
-        <h3>Nice to see you here.</h3>
-        <p>(<u>site under construction</u>)</p>
-    </body>
+<body>
+    <div class="container">
+        <div class="content">
+            <h1>Hello World!</h1>
+            <h2>My name is Gaurav Raj Shah.</h2>
+            <h3>Nice to see you here.</h3>
+            <p>(<u>site under construction</u>)</p>
+        </div>
+    </div>
+</body>
 
 </html>
