added link for my resume

--- a/index.html
+++ b/index.html
@@ -14,7 +14,21 @@
             <h1>Hello World!</h1>
             <h2>My name is Gaurav Raj Shah.</h2>
             <h3>Nice to see you here.</h3>
-            <p>(<u>site under construction</u>)</p>
+            <div class="space">
+
+            </div>
+
+            <div class="ext-links">
+                <h3></h3>
+                <p>Why don't you have a look at my <b>resume</b> <a href="">here</a>
+                </p>
+            </div>
+
+            <div class="space">
+
+            </div>
+
+            <p class="note">(<u>site under construction</u>)</p>
         </div>
     </div>
 </body>
