--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
             <div class="ext-links">
                 <h3></h3>
-                <p>Why don't you have a look at my <b>resume</b> <a href="">here</a>
+                <p>Why don't you have a look at my <b>resume</b> <a
+                        href="https://raw.githubusercontent.com/shahgauravraj/shahgauravraj.github.io/master/Resume/MyResume.jpg">here</a>
                 </p>
             </div>
 
