--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
     <div class="container">
         <div class="content">
             <h1>Hello World!</h1>
-            <h2>My name is Gaurav Raj Shah.</h2>
-            <h3>Nice to see you here.</h3>
+            <p class="intro">My name is <b class="name">Gaurav Raj Shah</b>.</p>
+            <h3>Nice to see you here!</h3>
             <div class="space">
 
             </div>
 
             <div class="ext-links">
                 <h3></h3>
-                <p>Why don't you have a look at my <b>resume</b> <a
-                        href="https://raw.githubusercontent.com/shahgauravraj/shahgauravraj.github.io/master/Resume/MyResume.jpg">here</a>
+                <p>Why don't you <b>have</b> a look at <b>my</b> <b>resume</b> <a
+                        href="https://raw.githubusercontent.com/shahgauravraj/shahgauravraj.github.io/master/Resume/MyResume.jpg">here</a>?
                 </p>
             </div>
 
