--- a/index.html
+++ b/index.html
@@ -20,9 +20,20 @@
 
             <div class="ext-links">
                 <h3></h3>
-                <p>Why don't you <b>have</b> a look at <b>my</b> <b>resume</b> <a
-                        href="https://raw.githubusercontent.com/shahgauravraj/shahgauravraj.github.io/master/Resume/MyResume.jpg">here</a>?
+                <p>Why don't you <b>checkout my -
                 </p>
+                <ul>
+                    <li>
+                        <b>resume </b><a
+                        href="https://raw.githubusercontent.com/shahgauravraj/shahgauravraj.github.io/master/Resume/MyResume.jpg">here</a>?
+                    </li>
+                    <li>
+                        <b>LinkedIn profile </b><a href="https://www.linkedin.com/in/gaurav-raj-shah-3872661b0/">here</a>?
+                    </li>
+                    <li>
+                        <b>GitHub profile </b><a href="https://github.com/shahgauravraj">here</a>?
+                    </li>
+                </ul>
             </div>
 
             <div class="space">
