pointing finger emoji added

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                 </p>
                 <ul>
                     <li>
-                        <b>resume </b><a
+                        <b>resume 👉</b><a
                         href="https://raw.githubusercontent.com/shahgauravraj/shahgauravraj.github.io/master/Resume/MyResume.jpg">here</a>?
                     </li>
                     <li>
-                        <b>LinkedIn profile </b><a href="https://www.linkedin.com/in/gaurav-raj-shah-3872661b0/">here</a>?
+                        <b>LinkedIn profile 👉</b><a href="https://www.linkedin.com/in/gaurav-raj-shah-3872661b0/">here</a>?
                     </li>
                     <li>
-                        <b>GitHub profile </b><a href="https://github.com/shahgauravraj">here</a>?
+                        <b>GitHub profile 👉</b><a href="https://github.com/shahgauravraj">here</a>?
                     </li>
                 </ul>
 
