some undoings done

--- a/index.html
+++ b/index.html
@@ -13,21 +13,16 @@
         <div class="content">
             <h1>Hello World!</h1>
             <p class="intro">My name is <b class="name">Gaurav Raj Shah</b>.</p>
-            <div class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal"
-                data-theme="dark" data-vanity="gaurav-raj-shah-3872661b0"><a class="LI-simple-link"
-                    href='https://in.linkedin.com/in/gaurav-raj-shah-3872661b0?trk=profile-badge'>Gaurav Raj Shah</a>
-            </div>
-            
-            <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async
-                defer></script>
-
             <h3>Nice to see you here!</h3>
-
             <div class="ext-links">
                 <h3></h3>
                 <p>Why don't you <b>checkout my -
                 </p>
                 <ul>
+                    <li>
+                        <b>LinkedIn profile 👉</b><a
+                            href="https://www.linkedin.com/in/gaurav-raj-shah-3872661b0/">here</a>?
+                    </li>
                     <li>
                         <b>resume 👉</b><a
                             href="https://raw.githubusercontent.com/shahgauravraj/shahgauravraj.github.io/master/Resume/MyResume.jpg">here</a>?
