--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
         <link rel="icon" href="assets/img/boy.png" type="image/x-icon">
 
-        <title>Gaurav Portfolio</title>
+        <title>Gaurav's Portfolio</title>
     </head>
     <body>
         <!--===== HEADER =====-->
