--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="assets/img/about.jpg" alt="">
+                        <img src="assets/img/Group 2.png" alt="">
                     </div>
                     
                     <div>
