contact details added

--- a/index.html
+++ b/index.html
@@ -181,7 +181,10 @@
 
         <!--===== FOOTER =====-->
         <footer class="footer">
-            <p class="footer__title">Gaurav</p>
+            <p class="footer__title">Gaurav Raj Shah</p>
+            <p>shahgauravraj@gmail.com</p>
+            <p>+91-9742665379</p>
+            <p>Yelahanka, Bangalore</p>
             <div class="footer__social">
                 <a href="https://www.facebook.com/gauravraj.shah.7" class="footer__icon"><i class='bx bxl-facebook' ></i></a>
                 <a href="https://www.instagram.com/_gaurav_rajj/" class="footer__icon"><i class='bx bxl-instagram' ></i></a>
