--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">Hi There!</h2>
-                        <p class="about__text">I am Gaurav Raj Shah, a third year Computer Science and Engineering student at NMIT, Bangalore. I am very much interested in web development and I know a bunch of programming languages such as C, C++, Java, JavaScript, Python, Dart, R and Scala. Apart from this, I am recently involved in Machine Learning based AI Research as well.</p>           
+                        <p class="about__text">I am Gaurav Raj Shah, a third year Computer Science and Engineering student at NMIT, Bangalore. I am intensely inquisitive about web and mobile development. I know a bunch of programming languages such as C, C++, Java, JavaScript, Python, Dart, R and Scala. And apart from this, I am recently involved in Machine Learning based AI Research, specifically in a class of machine learning framework called Generative Adversarial Networks, as well.</p>           
                     </div>                                   
                 </div>
             </section>
@@ -81,7 +81,7 @@
                 <div class="skills__container bd-grid">          
                     <div>
                         <h2 class="skills__subtitle">Profesional Skills</h2>
-                        <p class="skills__text">I know a bunch of programming languages such as C, C++, Java, JavaScript, Python, Dart, R and Scala.</p>
+                        <p class="skills__text">I can code in a number of programming languages such as C, C++, Java, JavaScript, Python, Dart, R and Scala.</p>
                         <div class="skills__data">
                             <div class="skills__names">
                                 <i class='bx bxl-html5 skills__icon'></i>
