--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
-        <link rel="icon" href="assets/img/boy.png" type="image/x-icon">
+        <link rel="icon" href="assets/img/Group 1.png" type="image/x-icon">
 
         <title>Gaurav's Portfolio</title>
     </head>
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="home__img">    
-                    <img src="assets/img/Group 2.png" alt="">
+                    <img src="assets/img/Group 1.png" alt="">
                 </div>
             </section>
 
@@ -64,7 +64,7 @@
 
                 <div class="about__container bd-grid">
                     <div class="about__img">
-                        <img src="assets/img/Group 2.png" alt="">
+                        <img src="assets/img/Group 1.png" alt="">
                     </div>
                     
                     <div>
