typing effect added

--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
             <!--===== HOME =====-->
             <section class="home bd-grid" id="home">
                 <div class="home__data">
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Gaurav</span>. A<br>Software Developer</h1>
+                    <!-- <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Gaurav</span>. A<br>Software Developer</h1> -->
+
+                    <!-- Part I've changed -->
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Gaurav</span>. A<br> <span class="typed-text"></span><span class="cursor">&nbsp;</span></h1>
+                    <!-- Part I've changed -->
 
                     <a href="#contact" class="button">Contact</a>
                 </div>
