--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     
                     <div>
                         <h2 class="about__subtitle">Hi There!</h2>
-                        <p class="about__text">My name is Gaurav Raj Shah. I am from Nepal. I am a third year Computer Science and Engineering student at NMIT, Bangalore in India. I am intensely inquisitive about Web Development and Mobile App Development. I am comfortable with a bunch of programming languages such as C, C++, Java, JavaScript, Python, Dart, R and Scala. And apart from this, I am recently involved in Machine Learning based AI Research, specifically in a class of machine learning framework called Generative Adversarial Networks, as well.</p>           
+                        <p class="about__text">My name is Gaurav Raj Shah. I am from Nepal. I am a Computer Science and Engineering student at NMIT, Bangalore in India. I am intensely inquisitive about Web Development and Mobile App Development. I am comfortable with a bunch of programming languages such as C, C++, Java, JavaScript, Python, Dart, R and Scala. And apart from this, I am recently involved in Machine Learning based AI Research, specifically in a class of machine learning framework called Generative Adversarial Networks, as well.</p>           
                     </div>                                   
                 </div>
             </section>
