--- a/index.html
+++ b/index.html
@@ -44,11 +44,7 @@
             <section class="home bd-grid" id="home">
                 <div class="home__data">
                     <!-- <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Gaurav</span>. A<br>Software Developer</h1> -->
-
-                    <!-- Part I've changed -->
                     <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Gaurav</span>. A<br> <span class="typed-text"></span><span class="cursor">&nbsp;</span></h1>
-                    <!-- Part I've changed -->
-
                     <a href="#contact" class="button">Contact</a>
                 </div>
 
@@ -160,22 +156,34 @@
 
                 <div class="work__container bd-grid">
                     <div class="work__img">
-                        <img src="assets/img/work1.jpg" alt="">
+                        <a href="https://github.com/shahgauravraj?tab=repositories">
+                            <img src="assets/img/work1.jpg" alt="">
+                        </a>
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/work2.jpg" alt="">
+                        <a href="https://github.com/shahgauravraj?tab=repositories">
+                            <img src="assets/img/work2.jpg" alt="">
+                        </a>
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/work3.jpg" alt="">
+                        <a href="https://github.com/shahgauravraj?tab=repositories">
+                            <img src="assets/img/work3.jpg" alt="">
+                        </a>
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/work4.jpg" alt="">
+                        <a href="https://github.com/shahgauravraj?tab=repositories">
+                            <img src="assets/img/work4.jpg" alt="">
+                        </a>
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/work5.jpg" alt="">
+                        <a href="https://github.com/shahgauravraj?tab=repositories">
+                            <img src="assets/img/work5.jpg" alt="">
+                        </a>
                     </div>
                     <div class="work__img">
-                        <img src="assets/img/work6.jpg" alt="">
+                        <a href="https://github.com/shahgauravraj?tab=repositories">
+                            <img src="assets/img/work6.jpg" alt="">
+                        </a>
                     </div>
                 </div>
             </section>
