--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <section class="home bd-grid" id="home">
                 <div class="home__data">
                     <!-- <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Gaurav</span>. A<br>Software Developer</h1> -->
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Gaurav</span>. A<br> <span class="typed-text"></span><span class="cursor">&nbsp;</span></h1>
+                    <h1 class="home__title">Hi,<br>I am <span>Gaurav</span>. A<br> <span class="typed-text"></span><span class="cursor">&nbsp;</span></h1>
                     <a href="#contact" class="button">Contact</a>
                 </div>
 
